--- a/src/lang/webManager.en_US.neon
+++ b/src/lang/webManager.en_US.neon
@@ -4,3 +4,4 @@ web:
             title: "MailChimp"
             apiKey: "API key"
             list: "List"
+            info: "For proper functioning of the services should be set list. If the service is not set, the list will be set up after preference."
