priprava pro konverze

--- a/src/lang/webManager.cs_CZ.neon
+++ b/src/lang/webManager.cs_CZ.neon
@@ -3,5 +3,6 @@ web:
         mailChimp:
             title: "MailChimp"
             apiKey: "API klíč"
+            storeId: "ID obchodu"
             list: "Seznam"
             info: "Pro správné fungování služby je třeba mít nastavený seznam. Pokud služba není nastavena, seznam se nastaví až po jejím nastavní."
